--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Indonesia Travel</title>
+    <title>Travelite</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -53,7 +53,7 @@
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h5>Best way to </h5>
-                            <h1>Tour Around Indonesia</h1>
+                            <h1>Tour Around Indonesia's Island and Country</h1>
                         </div>
                     </div>
                 </div>
@@ -190,27 +190,6 @@
     </section>
     <!-- use sasu part end-->
 
-    <!-- cta part start-->
-    <section class="cta_part section_padding">
-        <div class="container">
-            <div class="row justify-content-center align-items-center">
-                <div class="col-lg-8 col-xl-7">
-                    <div class="cta_text text-center">
-                        <h5>Join Our Newsletter</h5>
-                        <h2>Subscribe to get Updated
-                                with new offers</h2>
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Enter email address" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
-                            <div class="input-group-append" id="button-addon4">
-                                <a href="#" class="subs_btn">subscribe now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- cta part end-->
 
 
     <!--::footer_part start::-->
